deploy: aee897873e76c4b6ccc123eff8e9bcd363185dbb

--- a/hardware/flashing.html
+++ b/hardware/flashing.html
@@ -477,7 +477,7 @@
 <ol class="arabic simple">
 <li><p>press and hold the ‘BOOT’ button</p></li>
 <li><p>press and release the ‘RESET’ button</p></li>
-<li><p>release the ‘BOOT’ button</p></li>
+<li><p>release the ‘BOOT’ button when the RGB-LED changes to purple</p></li>
 </ol>
 </li>
 <li><p>Run <code class="docutils literal notranslate"><span class="pre">mcbootflash</span> <span class="pre">--port</span> <span class="pre">&lt;portname&gt;</span> <span class="pre">-b</span> <span class="pre">460800</span> <span class="pre">pslab-firmware.hex</span></code></p></li>
